# FEFUOne-Work-Git

./: .env.example  .gitignore  README.md  docker-compose.yml
frontend/: .dockerignore  index.html  nginx.conf  package-lock.json  package.json  shot.mjs  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/data/: assistant.ts  workspace.ts
frontend/src/i18n/: index.ts
frontend/src/lib/: api.ts  query-client.ts
frontend/src/ui/: Avatar.tsx  Badge.tsx  Button.tsx  Card.tsx  CircularProgress.tsx  Dropdown.tsx  IconButton.tsx  ProgressBar.tsx  Select.tsx  Tag.tsx  Tooltip.tsx  index.ts
services/ai-agent/: pyproject.toml
services/ai-agent/app/: agent.py  config.py  main.py  schemas.py
services/auth/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
services/auth/app/: config.py  database.py  main.py  models.py  schemas.py  security.py  service.py
services/auth/app/permissions/: enums.py  model.py  service.py
services/auth/app/roles/: model.py  schemas.py  service.py
services/auth/app/sso/: cookies.py  dependencies.py  router.py  yandex.py
services/auth/app/subdivisions/: model.py  schemas.py  service.py
services/auth/app/users/: model.py  schemas.py  service.py
services/auth/migrations/: env.py
services/auth/migrations/versions/: 0001_initial.py
services/gateway/: Dockerfile  pyproject.toml
services/gateway/app/: config.py  (+1 more)
services/ingestor/: pyproject.toml
services/ingestor/airflow/dags/: mol_ingest.py
services/ingestor/app/: config.py  main.py  schemas.py
(+37 files in other folders)
