[project]
name = "mol-ai-agent"
version = "0.1.0"
description = "AI assistant service for the MOL platform (stub)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.7.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
