[project]
name = "mol-auth"
version = "0.1.0"
description = "Authentication service for the MOL assistant"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.0.0",
    "fastapi-sso>=0.15.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
